# nenserver

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.a4ff01b  readme.md
nenserver/: CMakeLists.txt
nenserver/include/: env.h  species.h  tables.h
nenserver/src/: env.cpp  main.cpp  main.cpp.autosave  renderer.cpp  server.cpp  species.cpp
nenserver/src/species/: swimmer.fbs  swimmer_generated.h
